refactor: 빈 리스트 만들기 List.of() 대신 emptyList() 사용