@@ -3,6 +3,7 @@ package racingcar;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -18,7 +19,7 @@ public class CarsTest {
     @Test
     @DisplayName("차 이름이 0개라면 예외가 발생한다")
     void new_cars_length_less_than_1() {
-        assertThatThrownBy(() -> new Cars(List.of()))
+        assertThatThrownBy(() -> new Cars(Collections.emptyList()))
             .isInstanceOf(IllegalArgumentException.class);
     }
 
